fix some spacing issues

--- a/app/styles/app/layouts/buildheader.sass
+++ b/app/styles/app/layouts/buildheader.sass
@@ -5,7 +5,7 @@
 
 .repo-header
   header
-    margin: 1rem 0 3rem
+    margin: 1rem 0 2.4rem
     > *
       vertical-align: middle
 
@@ -65,6 +65,8 @@
     font-size: $font-size-m
     color: $grey3
     line-height: 1
+    a
+      color: $grey3
   small
     margin-right: .3em
     font-weight: 600
@@ -75,7 +77,10 @@
       @include fadeOut(right, -90deg, $cream-light)
 
 .repo-main-description
-
+  p:not(.body)
+    color: $grey3
+    a
+      color: $grey3
   p
     margin: 0
   @media #{$medium-up}
@@ -136,5 +141,6 @@
     width: 1.2em
 
 .build-title
+  margin-top: 2.5rem
   color: $grey1
   font-size: $font-size-sm
